apps/base/foundry/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: foundry
  namespace: foundry
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: foundry
  template:
    metadata:
      labels:
        app: foundry
        app.kubernetes.io/name: foundry
        app.kubernetes.io/instance: foundry
    spec:
      containers:
        - name: foundry
          image: ghcr.io/felddy/foundryvtt:14.363
          ports:
            - containerPort: 30000
              name: http-foundry
          volumeMounts:
            - name: foundry-data
              mountPath: /data
          resources:
            requests:
              cpu: "10m"
              memory: "64Mi"
            limits:
              cpu: "500m"
              memory: "256Mi"
      volumes:
        - name: foundry-data
          persistentVolumeClaim:
            claimName: foundry-data-pvc
      securityContext:
        runAsUser: 1000
        runAsGroup: 1000
        fsGroup: 1000
        fsGroupChangePolicy: "OnRootMismatch"
