apps/base/foundry/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: foundry
  namespace: foundry
spec:
  selector:
    app: foundry
  ports:
    - name: http-foundry
      protocol: TCP
      port: 30000
      targetPort: http-foundry
