apps/base/foundry/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: foundry
  namespace: foundry
spec:
  ingressClassName: traefik
  rules:
    - host: foundry.localho.st
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: foundry
                port:
                  name: http-foundry
