apps/base/foundry/route.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: foundry-route
  namespace: foundry
spec:
  parentRefs:
    - name: traefik-gateway
      namespace: traefik
  hostnames:
    - foundry.localho.st
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: foundry
          port: 30000
